# tapenade

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  plots_Alice.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
notebooks/: Analysis.py  analysis.py  analysis_Alice.py  case_tests.ipynb  deformation_analysis_notebook.ipynb  masked_gaussian_smoothing_notebook.ipynb  organoid_notebook.ipynb  preprocessing_notebook.ipynb  processing_notebook.ipynb  registration_notebook.ipynb  registration_notebook_for_demo.ipynb  segmentation_notebook.ipynb  spatial_correlation_analysis_notebook.ipynb  spectral_filtering.ipynb  spectral_filtering_notebook.ipynb  test_Alice.ipynb
old_notebooks/: analysis.py  analysis_Alice.py  processing_notebook.ipynb  registration_notebook.ipynb  registration_notebook_Alice _Pulsedata.ipynb  registration_notebook_Alice.ipynb  registration_test_dtype.ipynb  segmentation_notebook.ipynb
src/organoid/: __init__.py  _organoid.py  utils.py
src/organoid/_tests/: test_module.py  test_organoid.py
src/organoid/analysis/: __init__.py  _additional_regionprops_properties.py  _analysis.py
src/organoid/analysis/spatial_correlation/: _spatial_correlation_plotter.py
src/organoid/preprocessing/: __init__.py  _axis_alignment.py  _dummy_class.py  _intensity_normalization.py  _isotropize.py  _labels_masking.py  _local_equalization.py  _local_normalization.py  _preprocess.py  _smoothing.py  _thresholding.py  preprocessing.py  processing_notebook.ipynb  segmentation_postprocessing.py
src/organoid/preprocessing/_tests/: test_local_normalization_robustness.py  test_mask_robustness.py  test_preprocessing.py
src/organoid/reconstrucion/: __init__.py  _reconstruct.py
src/organoid/reconstrucion/_tests/: test_reconstruction.py
src/organoid/reconstruction/: __init__.py  _reconstruct.py
src/organoid/reconstruction/_tests/: test_benchmark_rotate_order.py  test_layer_events_rotate_translate.py  test_reconstruction.py
src/organoid/segmentation/: __init__.py  _segment.py
src/organoid/segmentation/_tests/: test_segmentation.py
src/tapenade/: __init__.py  data.py  utils.py
src/tapenade/analysis/: _additional_regionprops_properties.py  additional_regionprops_properties.py
src/tapenade/analysis/deformation/: __init__.py  additional_regionprops_properties.py  deformation_quantification.py  morphometrics.py
src/tapenade/analysis/spatial_correlation/: __init__.py  _spatial_correlation_plotter.py
src/tapenade/notebooks/: cellpose-sam.ipynb  deformation_analysis_notebook.ipynb  masked_gaussian_smoothing_notebook.ipynb  preprocessing_notebook.ipynb  registration_notebook.ipynb  segmentation_notebook.ipynb  segmentation_notebook_cellpose-sam.ipynb  segmentation_notebook_stardist.ipynb  spatial_correlation_analysis_notebook.ipynb  spatial_features_morphometrics_notebook.ipynb  spectral_filtering_notebook.ipynb
src/tapenade/preprocessing/: __init__.py  _array_rescaling.py  _axis_alignment.py  _intensity_normalization.py  _labels_masking.py  _local_contrast_enhancement.py  _local_equalization.py  _nd2_reader.py  _preprocessing.py  _segmentation.py  _smoothing.py  _thresholding.py  preprocessing.py  segmentation_postprocessing.py
src/tapenade/reconstruction/: __init__.py  _reconstruct.py
src/tapenade/reconstruction/_tests/: test_reconstruction.py
src/tapenade/segmentation/: __init__.py  _segment.py
src/tapenade/segmentation/_tests/: test_segmentation.py
