[metadata]
name = tapenade
version = 0.0.1
description = A repository to process organoid images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuignardLab/tapenade
author = Leo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GuignardLab/tapenade/issues
    Documentation = https://github.com/GuignardLab/tapenade#README.md
    Source Code = https://github.com/GuignardLab/tapenade
    User Support = https://github.com/GuignardLab/tapenade/issues

[options]
packages = find:
install_requires =
    scipy
    jupyter
    numba
    numpy
    scikit-image
    scikit-learn
    tifffile
    matplotlib
    3d-registration >= 0.5.2
    tqdm

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
# add your package requirements here

[options.entry_points]
console_scripts =
    foo-script = tapenade:reconstruction.script_run


[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
dev =
    bumpver
    ruff
    black[jupyter]
    pytest

[options.package_data]
* = *.yaml


#needed for stardist prediction : tensorflow, stardist, csbdeep
#needed for registration : registrationtools (including trcabel, pip install github link, and add dll in bin folder), napari